--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -1,21 +1,26 @@
 .collapse{
-    position:absolute; 
-   
+  margin:0;   
     display:flex;
     gap:10px;
     background-color: #ff6060;
     color:#FFFFFF;
-    font-size: 14px;   
+    font-size: 18px;   
     border-radius: 10px;
-   
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    width:40%;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width:45%;
+    justify-content: space-between;
+    align-items: center;
     & .titleCollapse{
+        display: flex;
+        vertical-align: middle;
         color:white;
-        text-align: end;
+     margin:0;
+    }
+    & img{
+        margin:0;
     }
 }
 
