--- a/src/styles/formlogement.scss
+++ b/src/styles/formlogement.scss
@@ -1,7 +1,13 @@
 .formlogement{
     min-height: 100vh;
-    position: relative;  
+    position: relative; 
     
+    & .listCollapse{
+        display:flex;
+        margin-top: 15px;
+        justify-content: space-between;
+
+    }
     & .title{
         color: #ff6060;
         font-size: 36px;
@@ -15,8 +21,8 @@
     }
     & .containerHost{
         & .name{
-            // position: absolute;
-            bottom:245px;
+            position: absolute;
+            top: 561px;;
             right:74px;
             width:7%;
             color: #ff6060;
@@ -25,8 +31,8 @@
             text-align: end;
         }
         & .host{
-            // position: absolute;
-            bottom:261px;
+            position: absolute;
+            top:577px;
             right:0px;
             width:64px;
             border-radius: 50%;
@@ -34,9 +40,10 @@
 
     }
     & .rating{
-        // position:absolute;
-        top:673px;
+        position:absolute;
+        top:664px;
         right:-6px;
     }
+    
     
 }
