--- a/src/styles/tag.scss
+++ b/src/styles/tag.scss
@@ -4,8 +4,8 @@
     font-size: 14px;   
     border-radius: 10px;
     width:fit-content;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 4px;
     padding-bottom: 4px;
 }
@@ -14,4 +14,5 @@
     width: fit-content;
     display:flex;
     gap:10px;
+    margin: 0;
 }
